// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Splash Renders the same as the last time Matches snapshot 1`] = `
<Component
  color="red"
  icon="warning sign"
  isLoading={false}
  subtext="No response from server"
  text="Server Error"
>
  <Header
    as="h2"
    icon={true}
    textAlign="center"
  >
    <h2
      className="ui icon center aligned header"
    >
      <Icon
        as="i"
        color="red"
        loading={false}
        name="warning sign"
      >
        <i
          aria-hidden="true"
          className="red warning sign icon"
        />
      </Icon>
      <HeaderContent>
        <div
          className="content"
        >
          Server Error
          <HeaderSubheader>
            <div
              className="sub header"
            >
              No response from server
            </div>
          </HeaderSubheader>
        </div>
      </HeaderContent>
    </h2>
  </Header>
</Component>
`;

exports[`Splash Renders the same as the last time Matches snapshot 2`] = `
<Component
  color="red"
  icon="spinner"
  isLoading={true}
  subtext={null}
  text="Server Error"
>
  <Header
    as="h2"
    icon={true}
    textAlign="center"
  >
    <h2
      className="ui icon center aligned header"
    >
      <Icon
        as="i"
        color="red"
        loading={true}
        name="spinner"
      >
        <i
          aria-hidden="true"
          className="red spinner loading icon"
        />
      </Icon>
      <HeaderContent>
        <div
          className="content"
        >
          Server Error
        </div>
      </HeaderContent>
    </h2>
  </Header>
</Component>
`;
